--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-native-websocket": "^2.0.14",
     "vue-router": "^3.2.0",
     "vue-sse": "^1.0.2",
     "vue2-leaflet": "^2.6.0",
